# github_projects

./: README.md
agents/deepstudy/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/deepstudy/agents/: agents.py
agents/deepstudy/core/: models.py  pipeline.py  state.py
agents/deepstudy/src/deepstudy/: __init__.py
agents/deepstudy/tools/: search.py
agents/exam-agent/: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
agents/exam-agent/agents/: agents.py
agents/exam-agent/core/: models.py  pipeline.py  state.py
agents/exam-agent/tools/: search.py
cheatsheets/: markdown_cheatsheet.md
langgraph_projects/: agent-memory.py  agent.py  breakpoints.py  chain.py  chat-summarization.py  chatbot-external-memory.py  dynamic-breakpoint.py  edit-state-human-feedback.py  map-reduce.py  multiple-schema.py  parallelization.py  router.py  simple-graph.ipynb  state-reducers.py  state-schema.py  streaming.py  subgraph.py  time-travel.py  trim-filtering.py  web-searching.py
ml-projects/: eigenvalues-eigenvectors.py  gaussian-elimination.py  principal-component-analysis.py  simple-neural-network.py  transformations.py
